--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Resume</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> 
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.css">
+    <link href="node_modules/bootstrap/dist/css/bootstrap.css" rel="stylesheet"> 
+    <link href="font-awesome-4.7.0/css/font-awesome.css"rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-con" href="favicon.ico">
 </head>
