--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
                     <h3 class="text-center">Education</h3>
                     <ul class="timeline">
                         <li>
+                            <h4><span>2019 - </span> DigiPen Institute of Technology</h4>
+                            <p>M.S. in Computer Science.
+                                <br>
+                            <b>Session</b> - 2018 - 2019<br>
+                            <b>Location</b> - Redmond, Washington<br>
+                            </p>
+                        </li>
+                        <li>
                             <h4><span>2007 - </span> DigiPen Institute of Technology</h4>
                             <p>Bachelor of Science in Real-Time Interactive Simulation.  Minor in Physics and Mathematics.
                                 <br>
                             <b>Session</b> - 2003 - 2007<br>
                             <b>Location</b> - Redmond, Washington<br>
-                            </p>
-                        </li>
-                        <li>
-                            <h4><span>2001 - </span> Barry University</h4>
-                            <p>Pre-engineering major (Computer Science and Mathematics)
-                                <br>
-                            <b>Session</b> - 2000 - 2001<br>
-                            <b>Location</b> - Miami Shores, Florida<br>
                             </p>
                         </li>
                         <li>
