updating resume file

--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
                 <div class="col-md-6">
                     <h3 class="text-center">Professional Experience</h3>
                     <ul class="timeline">
+						<li>
+                            <h4><span>2020 - </span> Software Engineer </h4>
+                            <p>Worked on the popular Minecraft game for the Chinese consumer market. Provided support for the font rendering system and performance improvements. </p>  
+                            <b>Company</b> - Microsoft<br>
+                            <b>Duration</b> - 1 year [2019 to 2020]<br>
+                            <b>Location</b> - Redmond, Washington<br>
+                            </p>
+                        </li>
                         <li>
                             <h4><span>2019 - </span> Senior Software Engineer </h4>
                             <p>Developed numerous features for company’s Advanced Video Platform (AVP), such as graphics engine enhancements, support for third-party engines, optimizations, and troubleshooting.
